// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default page when there is not page match 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
    id="root"
  >
    <div
      className="columns"
    >
      <Sidebar
        className="column is-one-third-tablet is-one-quarter-desktop"
        content={[Function]}
        currentPage="/"
      />
      <docRootIndexFile
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
        plugins={Array []}
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`renders first page at index if found 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
    id="root"
  >
    <div
      className="columns"
    >
      <Sidebar
        className="column is-one-third-tablet is-one-quarter-desktop"
        content={[Function]}
        currentPage="/"
      />
      <firstPage
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
        plugins={Array []}
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`renders matched page 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
    id="root"
  >
    <div
      className="columns"
    >
      <Sidebar
        className="column is-one-third-tablet is-one-quarter-desktop"
        content={[Function]}
        currentPage="/foo"
      />
      <foo
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
        plugins={Array []}
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`renders renders index if firstPagePath specified but not actually in markdown map 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
    id="root"
  >
    <div
      className="columns"
    >
      <Sidebar
        className="column is-one-third-tablet is-one-quarter-desktop"
        content={[Function]}
        currentPage="/"
      />
      <docRootIndexFile
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
        plugins={Array []}
      />
    </div>
  </div>
  <Footer />
</div>
`;
